(library (name Mh2Lib) (public_name mh2.lib)
    (modules (:standard \ Mh2LibPesyModules))
    (libraries mh2.lib.pesy-modules) (flags -open Mh2LibPesyModules)
    (preprocess (pps ppx_pgsql ppxlib.runner lwt_ppx)))
(library (public_name mh2.lib.pesy-modules) (name Mh2LibPesyModules)
    (modules Mh2LibPesyModules)
    (libraries cohttp cohttp-lwt-unix graphql-cohttp graphql-lwt jwto lwt
        pgocaml safepass tablecloth-native))
(rule
    (with-stdout-to Mh2LibPesyModules.re
        (run echo
             "module Tablecloth = Tablecloth;\
            \nmodule Lwt = Lwt;\
            \nmodule Pgocaml = Pgocaml;\
            \nmodule Jwto = Jwto;\
            \nmodule Graphql_cohttp = Graphql_cohttp;\
            \nmodule Graphql_lwt = Graphql_lwt;\
            \nmodule Cohttp = Cohttp;\
            \nmodule Cohttp_lwt_unix = Cohttp_lwt_unix;\
            \nmodule Safepass = Safepass;")))
